# Informational-Security

./: Benchmark.cpp  CMakeLists.txt  HistBuilder.py  LICENSE  README.md  elephant_sequent.c  main.cpp
BlockCipher/: BlockCipher.cpp  CMakeLists.txt  Feistel.cpp  Feistel.h  FeistelExecutor.h
Ciphers/: CMakeLists.txt
Ciphers/BlockCipher/: CMakeLists.txt  Feistel.cpp  Feistel.h  FeistelExecutor.h
Ciphers/BlockCipherParallel/: CMakeLists.txt  Feistel.cu  Feistel.cu.h  FeistelPrallelExecutor.h
Ciphers/Elephant/: CMakeLists.txt  Elephant.cpp  Elephant.h  ElephantExecutor.h
Ciphers/ElephantParallel/: CMakeLists.txt  Elephant.cu  Elephant.cu.h  ElephantCudaExecutor.h
Ciphers/Mock/: CMakeLists.txt  Mock.cpp
Ciphers/RSA/: CMakeLists.txt  RSA.cpp  RSA.h  RSACipher.cpp  RSAExecutor.h  simple2.c  Поиск НОД.ipynb
Mock/: MockExecutor.h
RSA/: CMakeLists.txt  RSA.cpp  RSA.h  RSACipher.cpp  Поиск НОД.ipynb
Testing/: Benchmark.h  Executor.h  Generator.h
Texts/: HamletDecBC.txt  HamletEncBC.txt  HamletEncRSA.txt
Utils/: Utils.h
